--- a/proejct/package.json
+++ b/proejct/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "mongoose": "^5.13.15",
@@ -37,6 +38,7 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
