--- a/proejct/.env
+++ b/proejct/.env
@@ -1,3 +1,7 @@
 MONGODB_URI='mongodb+srv://chae:1q2w3e4r!@nestcluster.gvijubu.mongodb.net/?cats=true&w=majority'
 PORT=8000
 MODE='dev'
+
+JWT_SECRET='secret'
+SWAGGER_USER=chae
+SWAGGER_PASSWORD=1234
