--- a/proejct/.env
+++ b/proejct/.env
@@ -5,3 +5,9 @@ MODE='dev'
 JWT_SECRET='secret'
 SWAGGER_USER=chae
 SWAGGER_PASSWORD=1234
+
+AWS_S3_ACCESS_KEY="AKIA5EGCDL45ATA2SV4U"
+AWS_S3_SECRET_KEY="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"
+AWS_S3_REGION="ap-northeast-2"
+AWS_S3_BUCKET_NAME="nestcatbychae"
+
