--- a/proejct/.env
+++ b/proejct/.env
@@ -6,8 +6,8 @@ JWT_SECRET='secret'
 SWAGGER_USER=chae
 SWAGGER_PASSWORD=1234
 
-AWS_S3_ACCESS_KEY="AKIA5EGCDL45L6KKG4FJ"
-AWS_S3_SECRET_KEY="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"
-AWS_S3_REGION="ap-northeast-2"
-AWS_S3_BUCKET_NAME="nestcatbychae"
+AWS_S3_ACCESS_KEY=""
+AWS_S3_SECRET_KEY=""
+AWS_S3_REGION=""
+AWS_S3_BUCKET_NAME=""
 
